test/vlt/01-syntax/inv_msg/inv_msg.ml
let () = [%debug_log 0]
